# Themerr-jellyfin

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .rstcheck.cfg  .sonarcloud.properties  CHANGELOG.md  DOCKER_README.md  Directory.Build.props  Dockerfile  Jellyfin.Plugin.ThemeSongs.sln  Jellyfin.Plugin.Themerr.sln  README.md  README.rst  build.yaml  crowdin.yml  pyproject.toml  qodana-dotnet.yaml  qodana-python.yaml  requirements-dev.txt  sonar-project.properties
Jellyfin.Plugin.ThemeSongs/: Jellyfin.Plugin.ThemeSongs.csproj  Plugin.cs  ThemeSongsManager.cs
Jellyfin.Plugin.Themerr/: IYoutubeClientWrapper.cs  Jellyfin.Plugin.Themerr.csproj  Jellyfin.Plugin.Themerr.csproj.bak  Plugin.cs  ThemerrDbType.cs  ThemerrLocalizationManager.cs  ThemerrManager.cs  ThemerrPlugin.cs  ThemerrServiceRegistrator.cs  ThemerrStartupService.cs  YoutubeClientWrapper.cs
Jellyfin.Plugin.Themerr.Tests/: BootstrapJellyfinServer.cs  FixtureCollection.cs  FixtureJellyfinServer.cs  Jellyfin.Plugin.Themerr.Tests.csproj  TestHelper.cs  TestLogger.cs  TestPluginConfiguration.cs  TestThemerrController.cs  TestThemerrLocalizationController.cs  TestThemerrLocalizationManager.cs  TestThemerrManager.cs  TestThemerrPlugin.cs  TestThemerrRepository.cs  TestThemerrServiceRegistrator.cs  TestThemerrStartupService.cs  TestThemerrTasks.cs  TestYoutubeClientWrapper.cs  TestableServerConfiguration.cs
Locale/: bg.json  cs.json  de.json  en.json  en_GB.json  en_US.json  es.json  fr.json  hu.json  it.json  ja.json  ko.json  pl.json  pt.json  pt_BR.json  ru.json  (+6 more)
(+60 files in other folders)
